--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cross-fetch": "^3.0.4",
     "datatables.net": "^1.10.20",
     "formik": "^2.1.1",
     "jquery": "^3.4.1",
@@ -17,6 +18,7 @@
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.28.0"
   },
   "scripts": {
